--- a/client/src/assets/styles/main.css
+++ b/client/src/assets/styles/main.css
@@ -5,6 +5,7 @@
     text-align: center;
     margin-top: 60px;   
     font-size: 20px;
+    overflow: hidden; /* fix an issue where scroll bars appear during Vue animations */
   }
   
   body {
