--- a/client/src/assets/styles/variables.css
+++ b/client/src/assets/styles/variables.css
@@ -5,6 +5,7 @@
     --primary-teal: #16D8B5;
     --primary-orange: #e5751f;   
     --primary-blue-green: #55a6ad;
+    --primary-white: #eeeeee;
 
     --transparent-red-80: #d8163ac9;
     --transparent-red-50:  #d8163a88;
